package classmanagement.domain;

public enum RecurrentClassWeekDay {

    MONDAY,

    TUESDAY,

    WEDNESDAY,

    THURSDAY,

    FRIDAY
}
